# acp-router

./: LICENSE  README.md  client.py  litellm_config.yaml  pyproject.toml  registry.py  router.py  router_handler.py  runtime.py  schemas.py  serve.py
adapters/: __init__.py  base.py  cursor.py  gemini.py  opencode.py  static.py
