[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-router"
version = "0.1.0"
description = "Route OpenAI-style requests to ACP agents through LiteLLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "litellm[proxy]",
  "agent-client-protocol>=0.7.0",
]

[project.scripts]
acp-router = "serve:main"

[tool.setuptools]
packages = ["adapters"]
py-modules = [
  "router",
  "router_handler",
  "runtime",
  "client",
  "registry",
  "utils",
  "schemas",
  "serve",
]
